Fix z-index element ordering bug to stop bg images overlaying fg

--- a/src/sass/background.scss
+++ b/src/sass/background.scss
@@ -16,6 +16,8 @@ html {
 
 h1 {
     display: inline-block;
+    float: right;
+    margin: 20px;
     padding: 8px 30px;
     font-family: "Assistant";
     font-weight: 800;
@@ -26,6 +28,7 @@ h1 {
     background: radial-gradient(#3a48d2, #0c0d1e);
     text-shadow: 0px 2px 3px #000000;
     font-size: 2.5em;
+
 }
 
 @media (orientation: landscape) {
